[package]
name = "xenos"
version = "0.1.0"
authors = ["Daniel Kiss"]

[dependencies]
stdweb = "0.4"
log = "0.4"
fern = "0.5"
screeps-game-api = "0.4"
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"
arrayvec = "0.4"

[profile.release]
panic = "abort"
# At O3 we actually ran out of cpu while initializing the script
# So Os it is
opt-level = "s"
lto = true
