[package]
name = "xenos"
version = "0.1.0"
authors = ["Daniel Kiss"]
build = "build.rs"

[dependencies]
stdweb = "0.4"
log = "0.4"
fern = "0.5"
screeps-game-api = "0.5"
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
arrayvec = { version="0.4", features = ["serde"] }
lazy_static = "1.3"
num = "0.2"
num-traits = "0.2"
num-derive = "0.2"

[build-dependencies]
semver = "0.9.0"

[profile.release]
panic = "abort"
# At O3 we actually ran out of cpu while initializing the script
# So Os it is
opt-level = "s"
lto = true

